한살림 장보기 헤더 완성

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="css/main.css">
+        <script src="js/script.js"></script>
 </head>
 <body>
 <!-- 안내창 -->
@@ -97,7 +98,7 @@
                     <!-- 전체메뉴 레이아웃 -->
                     <div class="all-menu-area">
                         <button class="all-bt">
-                            <i class="fa-soil fa-bars"></i>
+                            <i class="fa-solid fa-bars"></i>
                             전체물품
                         </button>
                         <!-- 전체메뉴 -->
@@ -459,7 +460,6 @@
                         <li><a href="#">요리</a></li>
                     </ul>
                 </div>
-
             </div>
             <!-- // 헤더 메인의 왼쪽 -->
             <!-- 헤더 메인의 오른쪽  -->
