--- a/index.html
+++ b/index.html
@@ -499,9 +499,23 @@
     <div class="visual-pg">1/17</div>
     <button class="visual-more"></button>
 </div>
-
 </section>
 <!-- 오늘의 상품 -->
+<section class="today">
+    <div class="container">
+        <h2 class="section-title">
+            <b>이 물품은 어떠세요?</b>
+        </h2>
+        <div class="good-wrap" id="data-today">
+            <!-- 외부 오늘상품 데이터 연동 js -->
+
+        </div>
+        <div class="good-wrap no-mb" id="data-today2">
+            <!-- 외부 오늘상품 데이터 연동 js -->
+        </div>
+    </div>
+
+</section>
 <!-- 알뜰 상품 -->
 <!-- 신상품 -->
 <!-- 추천물품 -->
